fetch to aws working, able to console log data

--- a/public/index.html
+++ b/public/index.html
@@ -15,12 +15,13 @@
   </header>
   <div id="search-container">
     <div id="search">
-      <input type="text" placeholder="Enter Zip Code" class="zipcodeField">
+      <input type="text" placeholder="Enter Zip Code">
       <button class="searchButton">Search</button>
 
     </div>
   </div>
-      <h2 id="zip-code"></h2>
+  <h3 id="selectedZip"></h3>
+  <!-- <h2 id="zip-code"></h2> -->
   <div id="graph-container">
     <div id="graph">
       <canvas id="zip-graph"></canvas>
